--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.6.1",
     "@types/johnny-five": "^2.1.11",
+    "axios": "^1.8.3",
     "johnny-five": "^2.1.0",
     "zod-to-json-schema": "^3.24.3"
   },
